[package]
name = "tat-adr"
version = "0.1.0"
authors = ["shumy <micaelpedrosa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = { version = "1.0", features = ["derive"] }
bls12_381 = "0.1"
sha2 = "0.8"
rand = "0.7"
clear_on_drop = "0.2"